--- a/applications/mindspore-doc-search/doc-search-secret.yaml
+++ b/applications/mindspore-doc-search/doc-search-secret.yaml
@@ -5,41 +5,26 @@ metadata:
   namespace: mindspore-doc-search
 spec:
   keysMap:
-    depp:
-      key: depp
-      path: secrets/data/mindspore/doc-search
-    eshost:
-      key: eshost
-      path: secrets/data/mindspore/doc-search
-    espassword:
-      key: espassword
-      path: secrets/data/mindspore/doc-search
-    esusername:
-      key: esusername
-      path: secrets/data/mindspore/doc-search
-    searchsystem:
-      key: searchsystem
-      path: secrets/data/mindspore/doc-search
-    GIT_USERNAME:
-      key: GIT_USERNAME
-      path: secrets/data/mindspore/doc-search
-    GIT_PASSWORD:
-      key: GIT_PASSWORD
-      path: secrets/data/mindspore/doc-search
-    MINDSPORE_OFFICIAL:
-      key: MINDSPORE_OFFICIAL
-      path: secrets/data/mindspore/doc-search
     xarmor_app_id:
       key: xarmor_app_id
-      path: secrets/data/mindspore/rasp_secret
-    xarmor_app_token:
-      key: xarmor_app_token
       path: secrets/data/mindspore/rasp_secret
     xarmor_backend_url:
       key: xarmor_backend_url
       path: secrets/data/mindspore/rasp_secret
     xarmor_tenant_id:
       key: xarmor_tenant_id
+      path: secrets/data/mindspore/rasp_secret
+    xarmor_backend_app_token:
+      key: xarmor_backend_app_token
+      path: secrets/data/mindspore/rasp_secret
+    xarmor_security_enable:
+      key: xarmor_security_enable
+      path: secrets/data/mindspore/rasp_secret
+    xarmor_security_root_password:
+      key: xarmor_security_root_password
+      path: secrets/data/mindspore/rasp_secret
+    xarmor_secutiry_work_password:
+      key: xarmor_secutiry_work_password
       path: secrets/data/mindspore/rasp_secret
   name: doc-search-secret
 
