--- a/applications/mindspore-doc-search/kustomization.yaml
+++ b/applications/mindspore-doc-search/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 commonAnnotations:
   kubernetes.ops.cluster: mindspore-cn4-x86-cluster
-  kubernetes.ops.email: 775517776@qq.com
+  kubernetes.ops.email: ""
   kubernetes.ops.os.base: debian
   kubernetes.ops.owner: chenyang
   kubernetes.ops.region: beijing
