--- a/applications/xihe-test-v2/big-model-finetune/kustomization.yaml
+++ b/applications/xihe-test-v2/big-model-finetune/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/big-model-finetune
-  newTag: c-dev-98b9e4
+  newTag: dev-4168c0
 kind: Kustomization
 namespace: xihe-test-v2
 resources:
