--- a/applications/xihe-test-v2/xihe-server/deployment.yaml
+++ b/applications/xihe-test-v2/xihe-server/deployment.yaml
@@ -21,6 +21,7 @@ spec:
         vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
         vault.hashicorp.com/agent-inject-perms-ca.crt: "0700"
         vault.hashicorp.com/agent-inject-perms-redis.crt: "0700"
+        vault.hashicorp.com/agent-inject-perms-postgre.crt: "0700"
         vault.hashicorp.com/agent-run-as-user: "5000"
         vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-test-v2"
         vault.hashicorp.com/agent-inject-template-application.yml: |
@@ -36,6 +37,11 @@ spec:
         vault.hashicorp.com/agent-inject-template-redis.crt: |
           {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
           {{ .Data.data.RedisCA }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-postgre.crt: "internal/data/mindspore/xihe-test-v2"
+        vault.hashicorp.com/agent-inject-template-postgre.crt: |
+          {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
+          {{ .Data.data.PostgreCA }}
           {{- end }}
         vault.hashicorp.com/agent-pre-populate-only: "true"
         vault.hashicorp.com/role: xihe-test
