--- a/applications/xihe-test-v2/xihe-statistics/xihe-statistics-deployment.yaml
+++ b/applications/xihe-test-v2/xihe-statistics/xihe-statistics-deployment.yaml
@@ -17,11 +17,17 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
+        vault.hashicorp.com/agent-inject-perms-postgre.crt: "0700"
         vault.hashicorp.com/agent-run-as-user: "5000"
         vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-test-v2"
         vault.hashicorp.com/agent-inject-template-application.yml: |
           {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
           {{ .Data.data.xiheStatistics }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-postgre.crt: "internal/data/mindspore/xihe-test-v2"
+        vault.hashicorp.com/agent-inject-template-postgre.crt: |
+          {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
+          {{ .Data.data.PostgreCA }}
           {{- end }}
         vault.hashicorp.com/agent-pre-populate-only: "true"
         vault.hashicorp.com/role: xihe-test
