--- a/applications/xihe-test-v2/inference-evaluate/deployment.yaml
+++ b/applications/xihe-test-v2/inference-evaluate/deployment.yaml
@@ -36,6 +36,13 @@ spec:
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
         imagePullPolicy: IfNotPresent
         name: inference-evaluate
+        env:
+        - name: INFERENCE_IMAGE
+          value: "swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate:dev-b6ec8e"
+        - name: INFERENCE_INIT_IMAGE
+          value: ""
+        - name: CLOUD_IMAGE
+          value: "swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-jupyter-cpu:v2.1"
         ports:
         - containerPort: 8000
           name: http
