--- a/applications/xihe-test-v2/inference-evaluate/deployment.yaml
+++ b/applications/xihe-test-v2/inference-evaluate/deployment.yaml
@@ -40,9 +40,9 @@ spec:
         - name: INFERENCE_IMAGE
           value: "swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate:dev-b6ec8e"
         - name: INFERENCE_INIT_IMAGE
-          value: ""
+          value: "swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate-init:dev-676509"
         - name: CLOUD_IMAGE
-          value: "swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-jupyter-cpu:v2.1"
+          value: "swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-jupyter-cpu:dev-615d31"
         ports:
         - containerPort: 8000
           name: http
