update xihe-test-v2 gradio:dev-63c0fe

--- a/applications/xihe-test-v2/inference-evaluate/deployment.yaml
+++ b/applications/xihe-test-v2/inference-evaluate/deployment.yaml
@@ -42,7 +42,7 @@ spec:
         - name: INFERENCE_IMAGE
           value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate:dev2-37764e
         - name: INFERENCE_INIT_IMAGE
-          value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate-init:dev2-844b75
+          value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate-init:dev-63c0fe
         - name: CLOUD_IMAGE
           value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-jupyter-cpu:dev2-37764e
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
