--- a/applications/xihe-test-v2/sync-repo/kustomization.yaml
+++ b/applications/xihe-test-v2/sync-repo/kustomization.yaml
@@ -10,4 +10,4 @@ images:
   newTag: main-411716
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/robot-gitlab-sync-repo
-  newTag: dev-a77a58
+  newTag: dev-2afdf0
