update xihe-test-v2 gradio:dev-d35b06

--- a/applications/xihe-test-v2/inference-evaluate/deployment.yaml
+++ b/applications/xihe-test-v2/inference-evaluate/deployment.yaml
@@ -40,7 +40,7 @@ spec:
         - --enable_debug=true
         env:
         - name: INFERENCE_IMAGE
-          value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate:dev2-37764e
+          value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate:dev-d35b06
         - name: INFERENCE_INIT_IMAGE
           value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate-init:dev-d35b06
         - name: CLOUD_IMAGE
