--- a/applications/mindspore-doc-search/doc-search-secret.yaml
+++ b/applications/mindspore-doc-search/doc-search-secret.yaml
@@ -46,3 +46,22 @@ spec:
       path: secrets/data/mindspore/mindspore-cn-tls
       key: ca.key
   name: doc-search-tls
+
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: doc-search-osinfra-tls
+  namespace: mindspore-doc-search
+spec:
+  name: doc-search-osinfra-tls
+  keysMap:
+    ca.crt:
+      path: secrets/data/infra-common/osinfra-cn
+      key: server.crt
+    tls.crt:
+      path: secrets/data/infra-common/osinfra-cn
+      key: server.crt
+    tls.key:
+      path: secrets/data/infra-common/osinfra-cn
+      key: server.key
