--- a/applications/mindspore-doc-search/doc-search-ingress.yaml
+++ b/applications/mindspore-doc-search/doc-search-ingress.yaml
@@ -19,3 +19,26 @@ spec:
   - hosts:
     - doc-search.mindspore.cn
     secretName: doc-search-tls
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/limit-rps: "5"
+  name: doc-search-osinfra-ingress
+  namespace: mindspore-doc-search
+spec:
+  rules:
+  - host: doc-search-mindspore.osinfra.cn
+    http:
+      paths:
+      - backend:
+          serviceName: doc-search-service
+          servicePort: 80
+        path: /
+  tls:
+  - hosts:
+    - doc-search-mindspore.osinfra.cn
+    secretName: doc-search-osinfra-tls
