--- a/applications/mindspore-usercenter/kustomization.yaml
+++ b/applications/mindspore-usercenter/kustomization.yaml
@@ -9,9 +9,10 @@ resources:
 - website-ingress.yaml
 - website-service.yaml
 - website-deployment.yaml
+- secret.yaml
 commonAnnotations:
   kubernetes.ops.cluster: mindspore-cn4-x86
-  kubernetes.ops.email: 377075038@qq.com
+  kubernetes.ops.email: ""
   kubernetes.ops.os.base: openeuler
   kubernetes.ops.owner: chenqi
   kubernetes.ops.region: beijing
