--- a/applications/xihe-test-v2/xihe-statistics/xihe-statistics-deployment.yaml
+++ b/applications/xihe-test-v2/xihe-statistics/xihe-statistics-deployment.yaml
@@ -16,8 +16,9 @@ spec:
     metadata:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
-        vault.hashicorp.com/agent-inject-perms-postgre.crt: "0700"
+        vault.hashicorp.com/agent-inject-perms-application.yml: "0600"
+        vault.hashicorp.com/agent-inject-perms-postgre.crt: "0600"
+        vault.hashicorp.com/agent-inject-perms-mq.crt: "0600"
         vault.hashicorp.com/agent-run-as-user: "5000"
         vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-test-v2"
         vault.hashicorp.com/agent-inject-template-application.yml: |
@@ -28,6 +29,11 @@ spec:
         vault.hashicorp.com/agent-inject-template-postgre.crt: |
           {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
           {{ .Data.data.PostgreCA }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-mq.crt: "internal/data/mindspore/xihe-test-v2"
+        vault.hashicorp.com/agent-inject-template-mq.crt: |
+          {{- with secret "internal/data/mindspore/xihe-test-v2" -}}
+          {{ .Data.data.MqCA }}
           {{- end }}
         vault.hashicorp.com/agent-pre-populate-only: "true"
         vault.hashicorp.com/role: xihe-test
