--- a/applications/xihe-test-v2/inference-evaluate/deployment.yaml
+++ b/applications/xihe-test-v2/inference-evaluate/deployment.yaml
@@ -44,7 +44,7 @@ spec:
         - name: INFERENCE_INIT_IMAGE
           value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate-init:dev-fdcae9
         - name: CLOUD_IMAGE
-          value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-jupyter-cpu:dev-d35b06
+          value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-jupyter-cpu:dev-fdcae9
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
         imagePullPolicy: IfNotPresent
         name: inference-evaluate
