--- a/applications/xihe-new/hook-delivery/deployment.yaml
+++ b/applications/xihe-new/hook-delivery/deployment.yaml
@@ -9,24 +9,18 @@ spec:
     metadata:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
-        vault.hashicorp.com/agent-inject-perms-hmac: "0700"
-        vault.hashicorp.com/agent-inject-perms-kafka: "0700"
+        vault.hashicorp.com/agent-inject-perms-application.yml: "0600"
+        vault.hashicorp.com/agent-inject-perms-mq.crt: "0600"
         vault.hashicorp.com/agent-run-as-user: "5000"
         vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-new"
         vault.hashicorp.com/agent-inject-template-application.yml: |
           {{- with secret "internal/data/mindspore/xihe-new" -}}
           {{ .Data.data.HookDelivery }}
           {{- end }}
-        vault.hashicorp.com/agent-inject-secret-hmac: "internal/data/mindspore/xihe-new"
-        vault.hashicorp.com/agent-inject-template-hmac: |
+        vault.hashicorp.com/agent-inject-secret-mq.crt: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-mq.crt: |
           {{- with secret "internal/data/mindspore/xihe-new" -}}
-          {{ .Data.data.SystemHookHac }}
-          {{- end }}
-        vault.hashicorp.com/agent-inject-secret-kafka: "internal/data/mindspore/xihe-new"
-        vault.hashicorp.com/agent-inject-template-kafka: |
-          {{- with secret "internal/data/mindspore/xihe-new" -}}
-          {{ .Data.data.kafka }}
+          {{ .Data.data.MqCA }}
           {{- end }}
         vault.hashicorp.com/agent-pre-populate-only: "true"
         vault.hashicorp.com/role: xihe-new
@@ -39,8 +33,6 @@ spec:
         args:
         - --port=8000
         - --config-file=/vault/secrets/application.yml
-        - --hmac-secret-file=/vault/secrets/hmac
-        - --kafkamq-config-file=/vault/secrets/kafka
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
         imagePullPolicy: IfNotPresent
         ports:
