--- a/applications/xihe-new/sync-repo/deployment.yaml
+++ b/applications/xihe-new/sync-repo/deployment.yaml
@@ -9,18 +9,30 @@ spec:
     metadata:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
-        vault.hashicorp.com/agent-inject-perms-kafka: "0700"
+        vault.hashicorp.com/agent-inject-perms-application.yml: "0600"
+        vault.hashicorp.com/agent-inject-perms-redis.crt: "0600"
+        vault.hashicorp.com/agent-inject-perms-mysql.crt: "0600"
+        vault.hashicorp.com/agent-inject-perms-mq.crt: "0600"
         vault.hashicorp.com/agent-run-as-user: "5000"
         vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-new"
         vault.hashicorp.com/agent-inject-template-application.yml: |
           {{- with secret "internal/data/mindspore/xihe-new" -}}
           {{ .Data.data.syncrepo }}
           {{- end }}
-        vault.hashicorp.com/agent-inject-secret-kafka: "internal/data/mindspore/xihe-new"
-        vault.hashicorp.com/agent-inject-template-kafka: |
+        vault.hashicorp.com/agent-inject-secret-redis.crt: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-redis.crt: |
           {{- with secret "internal/data/mindspore/xihe-new" -}}
-          {{ .Data.data.kafka }}
+          {{ .Data.data.RedisCA }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-mysql.crt: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-mysql.crt: |
+          {{- with secret "internal/data/mindspore/xihe-new" -}}
+          {{ .Data.data.MysqlCA }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-mq.crt: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-mq.crt: |
+          {{- with secret "internal/data/mindspore/xihe-new" -}}
+          {{ .Data.data.MqCA }}
           {{- end }}
         vault.hashicorp.com/agent-pre-populate-only: "true"
         vault.hashicorp.com/role: xihe-new
@@ -33,7 +45,6 @@ spec:
         args:
         - --port=8000
         - --config-file=/vault/secrets/application.yml
-        - --kafkamq-config-file=/vault/secrets/kafka
         - --enable_debug=true
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
         imagePullPolicy: IfNotPresent
