--- a/applications/xihe-new/big-model-finetune/big-model-finetune-deployment.yaml
+++ b/applications/xihe-new/big-model-finetune/big-model-finetune-deployment.yaml
@@ -17,8 +17,9 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/secret-volume-path: "/bigmodel-finetune/conf/"
-        vault.hashicorp.com/agent-inject-perms-finetune_basic.yml: "0700"
-        vault.hashicorp.com/agent-inject-perms-asset.yml: "0700"
+        vault.hashicorp.com/agent-inject-perms-finetune_basic.yml: "0600"
+        vault.hashicorp.com/agent-inject-perms-asset.yml: "0600"
+        vault.hashicorp.com/agent-inject-perms-mysql.crt: "0600"
         vault.hashicorp.com/agent-run-as-user: "5000"
         vault.hashicorp.com/agent-inject-secret-finetune_basic.yml: "internal/data/mindspore/xihe-new"
         vault.hashicorp.com/agent-inject-template-finetune_basic.yml: |
@@ -29,6 +30,11 @@ spec:
         vault.hashicorp.com/agent-inject-template-asset.yml: |
           {{- with secret "internal/data/mindspore/xihe-new" -}}
           {{ .Data.data.finetuneAsset }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-mysql.crt: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-mysql.crt: |
+          {{- with secret "internal/data/mindspore/xihe-new" -}}
+          {{ .Data.data.MysqlCA }}
           {{- end }}
         vault.hashicorp.com/agent-pre-populate-only: "true"
         vault.hashicorp.com/role: xihe-new
