--- a/applications/xihe-new/inference-evaluate/deployment.yaml
+++ b/applications/xihe-new/inference-evaluate/deployment.yaml
@@ -9,8 +9,8 @@ spec:
     metadata:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
-        vault.hashicorp.com/agent-inject-perms-kubeconfig.json: "0700"
+        vault.hashicorp.com/agent-inject-perms-application.yml: "0600"
+        vault.hashicorp.com/agent-inject-perms-kubeconfig.json: "0600"
         vault.hashicorp.com/agent-run-as-user: "5000"
         vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-new"
         vault.hashicorp.com/agent-inject-template-application.yml: |
@@ -33,6 +33,13 @@ spec:
         - --port=8000
         - --config-file=/vault/secrets/application.yml
         - --enable_debug=true
+        env:
+        - name: INFERENCE_IMAGE
+          value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate:dev-fdcae9
+        - name: INFERENCE_INIT_IMAGE
+          value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-inference-evaluate-init:dev-fdcae9
+        - name: CLOUD_IMAGE
+          value: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-jupyter-cpu:dev-fdcae9
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe:latest
         imagePullPolicy: IfNotPresent
         name: inference-evaluate
