--- a/applications/xihe-new/internal-server/deployment.yaml
+++ b/applications/xihe-new/internal-server/deployment.yaml
@@ -9,8 +9,9 @@ spec:
     metadata:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/agent-inject-perms-application.yml: "0700"
-        vault.hashicorp.com/agent-inject-perms-ca.crt: "0700"
+        vault.hashicorp.com/agent-inject-perms-application.yml: "0600"
+        vault.hashicorp.com/agent-inject-perms-ca.crt: "0600"
+        vault.hashicorp.com/agent-inject-perms-postgre.crt: "0600"
         vault.hashicorp.com/agent-run-as-user: "5000"
         vault.hashicorp.com/agent-inject-secret-application.yml: "internal/data/mindspore/xihe-new"
         vault.hashicorp.com/agent-inject-template-application.yml: |
@@ -21,6 +22,11 @@ spec:
         vault.hashicorp.com/agent-inject-template-ca.crt: |
           {{- with secret "internal/data/mindspore/xihe-new" -}}
           {{ .Data.data.MongoCA }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-postgre.crt: "internal/data/mindspore/xihe-new"
+        vault.hashicorp.com/agent-inject-template-postgre.crt: |
+          {{- with secret "internal/data/mindspore/xihe-new" -}}
+          {{ .Data.data.PostgreCA }}
           {{- end }}
         vault.hashicorp.com/agent-pre-populate-only: "true"
         vault.hashicorp.com/role: xihe-new
