--- a/applications/xihe-new/inference-evaluate/kustomization.yaml
+++ b/applications/xihe-new/inference-evaluate/kustomization.yaml
@@ -11,3 +11,4 @@ images:
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-inference-evaluate
   newTag: main-be2103
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-inference-evaluate
+  newTag: main-d29957
