--- a/applications/xihe-new/xihe-server/kustomization.yaml
+++ b/applications/xihe-new/xihe-server/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
 - service.yaml
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-server
+  newTag: 72c600f28c690bcf7f9575f0560ddd5e0c6b5976
