--- a/applications/xihe-new/internal-server/kustomization.yaml
+++ b/applications/xihe-new/internal-server/kustomization.yaml
@@ -11,3 +11,4 @@ images:
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-internal-server
   newTag: main-fd17336
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-internal-server
+  newTag: 72c600f28c690bcf7f9575f0560ddd5e0c6b5976
