--- a/applications/xihe-new/message-server/kustomization.yaml
+++ b/applications/xihe-new/message-server/kustomization.yaml
@@ -10,3 +10,4 @@ images:
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-message-server
   newTag: main-47cdabc
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-message-server
+  newTag: 72c600f28c690bcf7f9575f0560ddd5e0c6b5976
