--- a/applications/xihe-new/big-model-finetune/kustomization.yaml
+++ b/applications/xihe-new/big-model-finetune/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/big-model-finetune
-  newTag: main-b9ca6e
+  newTag: main-2e6624
 kind: Kustomization
 namespace: xihe-new
 resources:
